crates/noxu-persist-derive/tests/ui/fail_missing_primary_key.rs
use noxu_persist::Entity;

#[derive(Entity)]
struct NoPrimaryKey {
    id: u64,
    name: String,
}

fn main() {}
